# JAX-PT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: changelog.rst  conf.py  installation.rst
docs/_build/html/: .buildinfo  api.html  changelog.html  examples.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  theory.html
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  theory.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/fastpt/: FASTPT.html  FPTHandler.html
docs/_build/html/_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  quickstart.rst.txt  theory.rst.txt
examples/: jpt_example.py
fast_pt.egg-info/: PKG-INFO  SOURCES.txt
fastpt/: CacheManager.py  FASTPT_simple.py  HT.py  IA_ABD.py  IA_gb2.py  J_k.py  RSD_ItypeII.py  __init__.py  fastpt_extr.py  fastpttest.py  gamma_funcs.py  get_nu1_nu2.py  info.py  timing_utils.py
fastpt/IA/: IA_ABD.py  IA_ct.py  IA_ctbias.py  IA_gb2.py  IA_ta.py  IA_tt.py  __init__.py
fastpt/core/: FASTPT.py  FASTPT_simple.py  FPTHandler.py  __init__.py
fastpt/rsd/: RSD.py  __init__.py
fastpt/utils/: __init__.py  kPol.py  matter_power_spt.py
jax_pt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jaxpt/: FASTPT.py  FPTHandler.py  FP_JAXPT.py  IA_ct.py  IA_ctbias.py  IA_ta.py  JAXPT.py  RG_RK4_filt.py  RSD.py  Wigner_symbols.py  __init__.py  device_utils.py  diff_config.py  example_refactor.py  filter_Pk.py  initialize_params.py  jax_utils.py  matter_power_spt.py  timing.py
tests/: Profiler.py  bulk_run_timer.py  cosmosis_p.txt  debug.py  k_h.txt  linebyline.py  memory_profiler.py  oldVnew_timer.py  test_benchmarks.py  test_cache.py  test_diff.py  test_fastpt.py  test_fp_jpt.py  test_handler.py  test_jaxpt.py  threshold.py  timed_cache_manager.json  timed_hash_key.json  timed_old.json  timed_pre_manager.json  timed_seperate_terms.json
tests/benchmarking/: PIA_tt_benchmark.txt  P_IA_ct_benchmark.txt  P_IA_der_benchmark.txt  P_IA_mix_benchmark.txt  P_IA_ta_benchmark.txt  P_IRres_benchmark.txt  P_OV_benchmark.txt  P_RSD_ABsum_components_benchmark.txt  P_RSD_ABsum_mu_benchmark.txt  P_RSD_benchmark.txt  P_bias_b3nl_benchmark.txt  P_bias_benchmark.txt  P_bias_lpt_NL_benchmark.txt  P_dd_benchmark.txt  P_gI_ct_benchmark.txt  P_gI_ta_benchmark.txt  P_gI_tt_benchmark.txt  P_kPol_benchmark.txt  benchmark.py  k_benchmark.txt
