[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "jax-pt"
dynamic = ["version"]
requires-python = ">=3.10"
description = "JAX-PT is a rewrite of the FAST-PT algorithm to be compatible with jax differentiation."
readme = "README.md"
authors = [
    { name = "Joseph E. McEwen" }, 
    { name = "Xiao Fang" }, 
    { name = "Jonathan Blazek" },
    { email = "blazek@berkeley.edu" },
    { name = "Vincent Schacknies" }
    ]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics'
]
keywords = [
    'FASTPT',
    'FAST-PT',
    'Perturbation-Theory'
]
dependencies = [
    "numpy>=1.17",
    "scipy>=1.2",
    "matplotlib>=3.0"
]

[project.optional-dependencies]

[project.urls]
homepage = "https://github.com/vschac/JAX-PT"

# Explicitly define where package is (same directory as .toml).
# Include matches full name of module how it would be imported in Python.
# (Based on guide here: https://setuptools.pypa.io/en/latest/userguide/package_discovery.html)
[tool.setuptools.packages.find]
where = ["."]
include = ["jaxpt*"]
