[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-pt"
version = "1.0.0"
description = "JAX-accelerated FAST-PT for computing perturbation theory power spectra"
authors = [{name = "Vincent Schacknies", email = "vincent.schacknies@icloud.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cosmology", "perturbation-theory", "jax", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "fast-pt>=4.0.0",
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "jax-cosmo>=0.1.0",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12_pip]>=0.7.0",
    "jaxlib[cuda12_pip]>=0.7.0",
]
gpu-cuda11 = [
    "jax[cuda11_pip]>=0.7.0", 
    "jaxlib[cuda11_pip]>=0.7.0",
]
dev = ["pytest", "memory_profiler", "matplotlib"]
all = [
    "jax[cuda12_pip]>=0.7.0",
    "jaxlib[cuda12_pip]>=0.7.0",
    "pytest", 
    "memory_profiler",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/vschac/jax-pt"
Repository = "https://github.com/vschac/jax-pt"
Documentation = "https://github.com/vschac/JAX-PT/blob/main/README.md"
"Bug Tracker" = "https://github.com/vschac/jax-pt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxpt*"]